# state-observation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  package.yaml  package.yml  state-observation.recipe
.github/workflows/sources/: package.yml
debian/: changelog  control  copyright  libstate-observation-dev.install  libstate-observation-doc.doc-base  libstate-observation-doc.lintian-overrides  libstate-observation.install  rules  source.lintian-overrides
doc/: Doxyfile.extra.in
doc/pages/: dcm-bias-estimator.html  dcm-bias-estimator.lyx  pages.dox
include/state-observation/: api.h  config.h.in
include/state-observation/dynamical-system/: bidim-elastic-inv-pendulum-dyn-sys.hpp  dynamical-system-functor-base.hpp  dynamical-system-simulator.hpp  imu-dynamical-system.hpp  imu-magnetometer-dynamical-system.hpp  imu-mltpctive-dynamical-system.hpp
include/state-observation/dynamics-estimators/: kinetics-observer.hpp  kinetics-observer.hxx  lipm-dcm-bias-estimator.hpp  lipm-dcm-estimator.hpp  unidim-lipm-dcm-bias-estimator.hpp  unidim-lipm-dcm-estimator.hpp
include/state-observation/examples/: imu-attitude-trajectory-reconstruction.hpp  imu-attitude-trajectory-reconstruction.hxx  imu-multiplicative-attitude-reconstruction.hpp  imu-multiplicative-attitude-reconstruction.hxx  offline-ekf-flexibility-estimation.hpp  offline-ekf-flexibility-estimation.hxx  offline-model-base-flex-estimation.hpp  offline-model-base-flex-estimation.hxx
include/state-observation/flexibility-estimation/: ekf-flexibility-estimator-base.hpp  fixed-contact-ekf-flex-estimator-imu.hpp  flexibility-estimator-base.hpp  imu-elastic-local-frame-dynamical-system.hpp  imu-fixed-contact-dynamical-system.hpp  model-base-ekf-flex-estimator-imu.hpp  stable-imu-fixed-contact-dynamical-system.hpp
include/state-observation/noise/: gaussian-white-noise.hpp  noise-base.hpp
include/state-observation/observer/: extended-kalman-filter.hpp  kalman-filter-base.hpp  linear-kalman-filter.hpp  observer-base.hpp  tilt-estimator.hpp  zero-delay-observer.hpp
include/state-observation/sensors-simulation/: accelerometer-gyrometer-magnetometer.hpp  accelerometer-gyrometer.hpp  algebraic-sensor.hpp  sensor-base.hpp
include/state-observation/sensors-simulation/algorithm/: linear-acceleration.hpp  magnetic-field.hpp  rotation-velocity.hpp
include/state-observation/tools/: definitions.hpp  definitions.hxx  hrp2.hpp  logger.hpp  miscellaneous-algorithms.hpp  probability-law-simulation.hpp  probability-law-simulation.hxx  rigid-body-kinematics.hpp  rigid-body-kinematics.hxx  state-vector-arithmetics.hpp
misc-tools/: CMakeLists.txt  IMU-Observation-tester.cpp  file-splitter.cpp  model-base-flex-estimator-file-tester.cpp  real-offline-flexibility-estimator.cpp  test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors.cpp  zmpEstimation.cpp
src/: CMakeLists.txt  accelerometer-gyrometer-magnetometer.cpp  accelerometer-gyrometer.cpp  algebraic-sensor.cpp  bidim-elastic-inv-pendulum-dyn-sys.cpp  definitions.cpp  dynamical-system-functor-base.cpp  dynamical-system-simulator.cpp  ekf-flexibility-estimator-base.cpp  extended-kalman-filter.cpp  fixed-contact-ekf-flex-estimator-imu.cpp  flexibility-estimator-base.cpp  gaussian-white-noise.cpp  imu-dynamical-system.cpp  imu-elastic-local-frame-dynamical-system.cpp  imu-fixed-contact-dynamical-system.cpp  imu-magnetometer-dynamical-system.cpp  imu-mltpctive-dynamical-system.cpp  kalman-filter-base.cpp  kinetics-observer.cpp  linear-acceleration.cpp  linear-kalman-filter.cpp  lipm-dcm-bias-estimator.cpp  lipm-dcm-estimator.cpp  logger.cpp  magnetic-field.cpp  model-base-ekf-flex-estimator-imu.cpp  observer-base.cpp  probability-law-simulation.cpp  rotation-velocity.cpp  sensor-base.cpp  stable-imu-fixed-contact-dynamical-system.cpp  state-vector-arithmetics.cpp  tilt-estimator.cpp  unidim-lipm-dcm-bias-estimator.cpp  unidim-lipm-dcm-estimator.cpp  zero-delay-observer.cpp
unit-testings/: CMakeLists.txt  flex-estimation-test.cpp  imu-multiplicative-test.cpp  imu-test.cpp  other-tests.cpp  simple-flex-estimation-test.cpp  test-dcm-bias-estimation.cpp  test-kalman-filter-template.cpp  test-kalman-filter.cpp  test-kinematics.cpp  test-kinetics-observer.cpp  test_acceleration_stabilization.cpp  test_model-base-ekf-flex-estimator-imu.cpp  test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors.cpp  tools.hpp  tools.hxx
utils/: build_and_install-windows.sh
