macro(ADD_STATE_ESTIMATOR_TOOL name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PUBLIC state-observation)
endmacro()

add_state_estimator_tool(model-base-flex-estimator-file-tester)
add_state_estimator_tool(file-splitter)
add_state_estimator_tool(real-offline-flexibility-estimator)
add_state_estimator_tool(test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors)
add_state_estimator_tool(zmpEstimation)
add_state_estimator_tool(IMU-Observation-tester)
